feat: add endpoint most history mood
